# swq-rs

./: .gitignore  Cargo.toml  README.md  build.rs
data/: quotes.txt
src/: cli.rs  gif.rs  main.rs  quote.rs
src/cli/: '  commands.rs  handler.rs  mod.rs
src/requests/: gif.rs  mod.rs  quote.rs
swq-rs-debbuilder/: Dockerfile  entrypoint.sh  run.sh
