[package]
name = "swq"
version = "0.1.0"
authors = ["Daniel Rose <danielrose@member.fsf.org>"]
description = "Fetch and add Star Wars quotes (and GIFs!) from the CLI."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rand = "0.8"
clipboard-ext = "0.2"
